--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,8 @@
 [versions]
-agp = "8.5.1"
+agp = "8.5.2"
 androidx-core-splashscreen = "1.0.1"
+firebase-bom = "33.3.0"
+hilt-android-gradle-plugin = "2.49"
 hilt-compiler-version = "1.2.0"
 kotlin = "1.8.21"
 core-ktx = "1.13.1"
@@ -9,28 +11,36 @@ androidx-test-ext-junit = "1.2.1"
 espresso-core = "3.6.1"
 appcompat = "1.7.0"
 kotlinx-coroutines-android = "1.7.3"
-lifecycle-viewmodel-ktx = "2.8.4"
+lifecycle-viewmodel-ktx = "2.8.6"
+lottie = "6.5.2"
 material = "1.12.0"
 constraintlayout = "2.1.4"
 okhttp = "5.0.0-alpha.14"
+play-services-auth = "21.2.0"
 retrofit = "2.9.0"
-gson = "2.10"
-navigation-fragment = "2.7.7"
-navigation-ui-ktx = "2.7.7"
+gson = "2.10.1"
+navigation-fragment = "2.8.1"
+navigation-ui-ktx = "2.8.1"
 coil = "2.6.0"
-google-hilt-compiler = "2.44"
-hilt-compiler = "2.44"
+google-hilt-compiler = "2.49"
+hilt-compiler = "2.49"
+googleid = "1.1.1"
 
 [libraries]
 androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "androidx-core-splashscreen" }
 androidx-hilt-compiler = { module = "androidx.hilt:hilt-compiler", version.ref = "hilt-compiler-version" }
 androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycle-viewmodel-ktx" }
+androidx-navigation-safe-args-gradle-plugin = { module = "androidx.navigation:navigation-safe-args-gradle-plugin", version.ref = "navigation-fragment" }
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
+firebase-auth = { module = "com.google.firebase:firebase-auth" }
+firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebase-bom" }
+hilt-android-gradle-plugin = { module = "com.google.dagger:hilt-android-gradle-plugin", version.ref = "hilt-android-gradle-plugin" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinx-coroutines-android" }
+lottie = { module = "com.airbnb.android:lottie", version.ref = "lottie" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 
@@ -42,10 +52,12 @@ hilt-compiler-v2432 = { module = "com.google.dagger:hilt-compiler", version.ref 
 
 coil = { module = "io.coil-kt:coil", version.ref = "coil" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
+play-services-auth = { module = "com.google.android.gms:play-services-auth", version.ref = "play-services-auth" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
 gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 androidx-navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment", version.ref = "navigation-fragment" }
+googleid = { group = "com.google.android.libraries.identity.googleid", name = "googleid", version.ref = "googleid" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
